--- a/hw5/index.html
+++ b/hw5/index.html
@@ -9,31 +9,31 @@
 <body>
 <button id="btn1">輸入104學年度第1學期成績</button><br><br>
 <form name="form1" id="grade1" method="post" >
-    計概:<input name="calculator" type="text" size="8" class="a"><br>
-    微積分:<input name="integral" type="text" size="8" class="a"><br>
-    java程式語言:<input name="java" type="text" size="8" class="a"><br>
-    資訊入門：<input name="information" type="text" size="8" class="a"><br>
+    <input name="calculator" type="text" size="8" class="a"  placeholder="計概:"><br><br>
+    <input name="integral" type="text" size="8" class="a" placeholder="微積分:"><br><br>
+    <input name="java" type="text" size="8" class="a" placeholder="java程式語言:"><br><br>
+    <input name="information" type="text" size="8" class="a" placeholder="資訊入門："><br><br>
 </form>
 <button id="btn2">輸入104學年度第2學期成績</button><br><br>
-<form name="form2" id="grade2" method="post" >
-    計概:<input name="calculator" type="text" size="8" class="b"><br>
-    微積分:<input name="integral" type="text" size="8" class="b"><br>
-    java程式語言:<input name="java" type="text" size="8" class="b"><br>
-    資訊入門：<input name="information" type="text" size="8" class="b"><br>
+<form name="form2" id="grade2" method="post"  >
+    <input name="calculator" type="text" size="8" class="b"  placeholder="計概:"><br><br>
+    <input name="integral" type="text" size="8" class="b" placeholder="微積分:"><br><br>
+    <input name="java" type="text" size="8" class="b" placeholder="java程式語言:"><br><br>
+    <input name="information" type="text" size="8" class="b" placeholder="資訊入門："><br><br>
 </form>
 <button id="btn3">輸入105學年度第1學期成績</button><br><br>
 <form name="form3" id="grade3" method="post" >
-    計概:<input name="calculator" type="text" size="8" class="c"><br>
-    微積分:<input name="integral" type="text" size="8" class="c"><br>
-    java程式語言:<input name="java" type="text" size="8" class="c"><br>
-    資訊入門：<input name="information" type="text" size="8" class="c"><br>
+    <input name="calculator" type="text" size="8" class="c" placeholder="計概:"><br><br>
+    <input name="integral" type="text" size="8" class="c" placeholder="微積分:"><br><br>
+    <input name="java" type="text" size="8" class="c" placeholder="java程式語言:"><br><br>
+    <input name="information" type="text" size="8" class="c"  placeholder="資訊入門："><br><br>
 </form>
 <button id="btn4">輸入105學年度第2學期成績</button><br><br>
 <form name="semester grade" id="grade4" method="post" >
-    計概:<input name="calculator" type="text" size="8" class="d"><br>
-    微積分:<input name="integral" type="text" size="8" class="d"><br>
-    java程式語言:<input name="java" type="text" size="8" class="d"><br>
-    資訊入門：<input name="information" type="text" size="8" class="d"><br>
+    <input name="calculator" type="text" size="8" class="d" placeholder="計概:"><br><br>
+    <input name="integral" type="text" size="8" class="d" placeholder="微積分:"><br><br>
+    <input name="java" type="text" size="8" class="d" placeholder="java程式語言:"><br><br>
+    <input name="information" type="text" size="8" class="d" placeholder="資訊入門："><br><br>
 </form>
 <button id="btn5" >總平均</button>
 <button id="btn6">每學期平均</button>
